Added stored XSS vulnerability and ability to create a runnable Jar file.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,6 +27,7 @@
       #end
     #else
       <li><em>Unpossible!  No users yet!</em></li>
+      <li>Searched for: $searchString</li>
     #end
   </div>
 </body>
